# adina-poc

./: .gitignore  app.py  doctr_ocr.py  pyproject.toml  requirements.txt  retriever.py  s3bucket.py
