[tool.poetry]
name = "adina-poc"
version = "0.1.0"
description = ""
authors = ["Ramanjit Singh <ramanjit.singh@sifars.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.16"
streamlit = "^1.33.0"
langchain-openai = "^0.1.3"
openai = "^1.17.1"
langchain-community = "^0.0.32"
langchain-text-splitters = "^0.0.1"
python-dotenv = "^1.0.1"
boto3 = "^1.34.84"
langchain-core = "^0.1.42"
faiss-cpu = "^1.8.0"
pypdf = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
